fixed horizontal scroll issue

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+* {
+    padding: 0;
+    margin: 0;
+}
+
+body {
+    overflow-x: hidden;
+}
+
 .container-fluid {
     padding-left: 0 !important;
     margin-left: 0 !important;
